# genericGlm

./: .gitignore  AUTHORS  Makefile.am  NEWS  README.md  configure.ac  meson.build  meson.options
include/: Diagram2.hpp  FallShapeGeometry2.hpp  FbShaderContext.hpp  GenericGlmCompat.hpp  GeometryContext.hpp  Glyph2.hpp  LineShapeGeometry2.hpp  LineShapeRenderer2.hpp  MarkContext.hpp  Matrix.hpp  NamedTreeNode2.hpp  NaviGlArea.hpp  Polygon2.hpp  Scene.hpp  ShaderContext.hpp  SunDiscGeometry2.hpp  SunDiscRenderer2.hpp  Text2.hpp  TextContext.hpp  TextTreeGeometry2.hpp  TreeGeometry2.hpp  TreeNode2.hpp  TreeRenderer2.hpp  meson.build
nbproject/: launcher.properties
src/: BaseDialog.cpp  BaseDialog.hpp  Buffer.cpp  Buffer.hpp  Diagram.cpp  Diagram.hpp  Diagram2.cpp  Diagram2.hpp  Displayable.cpp  Displayable.hpp  FallShapeGeometry.cpp  FallShapeGeometry.hpp  FallShapeGeometry2.cpp  FallShapeGeometry2.hpp  FallShapeRenderer.cpp  FallShapeRenderer.hpp  FallShapeRenderer2.cpp  FallShapeRenderer2.hpp  FbShaderContext.cpp  FbShaderContext.hpp  Font.cpp  Font.hpp  Font2.cpp  Font2.hpp  GenericGlmCompat.hpp  Geom2.cpp  Geom2.hpp  Geometry.cpp  Geometry.hpp  GeometryContext.cpp  GeometryContext.hpp  Glyph.cpp  Glyph.hpp  Glyph2.cpp  Glyph2.hpp  LineShapeGeometry.cpp  LineShapeGeometry.hpp  LineShapeGeometry2.cpp  LineShapeGeometry2.hpp  LineShapeRenderer.cpp  (+60 more)
test/: Makefile.am  buf_main.cpp  meson.build  ptr_main.cpp  ptr_main.hpp
